requirements and format correction

--- a/Instruction.ipynb
+++ b/Instruction.ipynb
@@ -60,14 +60,19 @@
    "metadata": {},
    "source": [
     "<div style=\"display: flex;\">\n",
-    "  <div style=\"flex: 20%; margin-right: 10px; margin-left: 70px;\">\n",
-    "    <img src=\"HeartPulseAnimation.gif\" alt=\"Heart Pulse Animation\" style=\"width:80%\">\n",
-    "  </div>\n",
-    "  <div style=\"flex: 20%; margin-left: 10px;\">\n",
-    "    <img src=\"Walk.gif\" alt=\"Walk Animation\" style=\"width:80%\">\n",
+    "  <div style=\"flex: 20%; margin-left: 60px;\">\n",
+    "    <img src=\"Data/HeartPulseAnimation.gif\" alt=\"Heart Pulse Animation\" style=\"width:45%\">\n",
+    "    <img src=\"Data/Walk.gif\" alt=\"Walk Animation\" style=\"width:45%; margin-left: 60px;\">\n",
     "  </div>\n",
     "</div>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
