tryed more things with audio and youtube but didnt work

--- a/Instruction.ipynb
+++ b/Instruction.ipynb
@@ -377,7 +377,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To conclude this Instruction session, you will now hear fragments of songs and read the figures on the score at the same time."
+    "To conclude this Instruction session, you will now hear fragments of songs and read the figures on the score at the same time. \n",
+    "(notice that only the beginning of the scores is given)"
    ]
   },
   {
@@ -404,48 +405,60 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from scipy.io import loadmat, wavfile\n",
-    "from IPython.lib.display import Audio\n",
+    "<html lang=\"en\">\n",
+    "<head>\n",
+    "    <meta charset=\"UTF-8\">\n",
+    "    <meta http-equiv=\"X-UA-Compatible\" content=\"IE=edge\">\n",
+    "    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\">\n",
+    "    <title>YouTube Video</title>\n",
+    "</head>\n",
+    "<body>\n",
     "\n",
-    "# import the speech from a wav file\n",
-    "r,speech = wavfile.read('Data/LRO.wav')\n",
-    "_,rir = wavfile.read('Data/LRO.wav')\n",
+    "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/watch?v=m-j-n-XJ-Tg\" frameborder=\"0\" allowfullscreen></iframe>\n",
     "\n",
-    "# Add the audio widget\n",
-    "print('Speech')\n",
-    "display(Audio(data=speech, rate=r))\n",
-    "print('Room Impulse Response')\n",
-    "display(Audio(data=rir[:,0], rate=r))"
+    "</body>\n",
+    "</html>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"400\"\n",
+       "            height=\"300\"\n",
+       "            src=\"https://www.youtube.com/embed/https://www.youtube.com/watch?v=m-j-n-XJ-Tg?start=0&autoplay=0&theme=light&color=red\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.YouTubeVideo at 0x1086a2e80>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from scipy.io import wavfile\n",
-    "from IPython.lib.display import Audio\n",
-    "import numpy as np\n",
+    "from IPython.display import YouTubeVideo\n",
+    "from datetime import timedelta\n",
     "\n",
-    "# import the speech from a wav file\n",
-    "r, speech = wavfile.read('LRO.wav')\n",
-    "_, rir = wavfile.read('LRO.wav')\n",
+    "# It is possible to start the video at a specific time\n",
+    "start=int(timedelta(hours=0, minutes=0, seconds=0).total_seconds())\n",
     "\n",
-    "# Normalize the speech array\n",
-    "normalized_speech = (speech / np.max(np.abs(speech)) * 32767).astype(np.uint16)\n",
-    "\n",
-    "# Add the audio widget\n",
-    "print('Speech')\n",
-    "display(Audio(data=normalized_speech, rate=r))\n",
-    "print('Room Impulse Response')\n",
-    "display(Audio(data=rir[:, 0], rate=r))\n",
-    "\n"
+    "YouTubeVideo(\"https://www.youtube.com/watch?v=m-j-n-XJ-Tg\", start=start, autoplay=0, theme=\"light\", color=\"red\")"
    ]
   },
   {
@@ -467,7 +480,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"Data/auf_uns.svg\" alt=\"Image Description\" width=\"1000\" height=\"1300\" style=\"margin-left: 30px; margin-right: 20px;\">"
+    "<img src=\"Data/auf_uns.svg\" alt=\"Image Description\" width=\"1000\" height=\"1300\" style=\"margin-left: 30px; margin-right: 20px;\">\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<html lang=\"en\">\n",
+    "<head>\n",
+    "    <meta charset=\"UTF-8\">\n",
+    "    <meta http-equiv=\"X-UA-Compatible\" content=\"IE=edge\">\n",
+    "    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\">\n",
+    "    <title>YouTube Video</title>\n",
+    "</head>\n",
+    "<body>\n",
+    "\n",
+    "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/watch?v=k9EYjn5f_nE\" frameborder=\"0\" allowfullscreen></iframe>\n",
+    "\n",
+    "</body>\n",
+    "</html>"
    ]
   },
   {
@@ -481,7 +513,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"Data/thunderstuck.png\" alt=\"Image Description\" width=\"1000\" height=\"1300\" style=\"margin-left: 30px; margin-right: 20px;\">"
+    "<img src=\"Data/thunderstuck.png\" alt=\"Image Description\" width=\"1000\" height=\"1300\" style=\"margin-left: 30px; margin-right: 20px;\">\n",
+    "\n",
+    "<html lang=\"en\">\n",
+    "<head>\n",
+    "    <meta charset=\"UTF-8\">\n",
+    "    <meta http-equiv=\"X-UA-Compatible\" content=\"IE=edge\">\n",
+    "    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\">\n",
+    "    <title>YouTube Video</title>\n",
+    "</head>\n",
+    "<body>\n",
+    "\n",
+    "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/watch?v=v2AC41dglnM\" frameborder=\"0\" allowfullscreen></iframe>\n",
+    "\n",
+    "</body>\n",
+    "</html>"
    ]
   },
   {
