--- a/Instruction.ipynb
+++ b/Instruction.ipynb
@@ -496,10 +496,49 @@
     "</head>\n",
     "<body>\n",
     "\n",
-    "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/watch?v=k9EYjn5f_nE\" frameborder=\"0\" allowfullscreen></iframe>\n",
+    "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/k9EYjn5f_nE\" frameborder=\"0\" allowfullscreen></iframe>\n",
     "\n",
     "</body>\n",
+    "</html>\n",
     "</html>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"400\"\n",
+       "            height=\"300\"\n",
+       "            src=\"https://www.youtube.com/embed/watch?v=k9EYjn5f_nE?start=0&autoplay=0&theme=light&color=red\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.YouTubeVideo at 0x107541730>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from IPython.display import YouTubeVideo\n",
+    "from datetime import timedelta\n",
+    "\n",
+    "# It is possible to start the video at a specific time\n",
+    "start=int(timedelta(hours=0, minutes=0, seconds=0).total_seconds())\n",
+    "\n",
+    "YouTubeVideo(\"watch?v=k9EYjn5f_nE\", start=start, autoplay=0, theme=\"light\", color=\"red\")"
    ]
   },
   {
