--- a/Instruction.ipynb
+++ b/Instruction.ipynb
@@ -365,7 +365,7 @@
    "metadata": {},
    "source": [
     "<img src=\"Data/tempo.png\" alt=\"Image Description\" width=\"100\" height=\"100\" style=\"margin-left: 30px; margin-right: 10px; margin-bottom: 140px;\">\n",
-    "<img src=\"Data/tempo-v4.png\" alt=\"Image Description\" width=\"600\" height=\"200\" style=\"margin-bottom: 90px;\">\n",
+    "<img src=\"Data/Tempo-v4.png\" alt=\"Image Description\" width=\"600\" height=\"200\" style=\"margin-bottom: 90px;\">\n",
     "<img src=\"Data/tempo-120.jpeg\" alt=\"Image Description\" width=\"500\" height=\"400\" style=\"margin-left: 10px; margin-right: 20px;\">"
    ]
   },
