--- a/Instruction.ipynb
+++ b/Instruction.ipynb
@@ -624,7 +624,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<iframe width=\"560\" height=\"315\" src=\"{https://www.youtube.com/watch?v=NDzH1t10k3M}\" frameborder=\"0\" allowfullscreen></iframe>'"
+    "<iframe width=\"560\" height=\"315\" src=\"{https://www.youtube.com/watch?v=NDzH1t10k3M}\" frameborder=\"0\" allowfullscreen></iframe>"
    ]
   },
   {
