--- a/Instruction.ipynb
+++ b/Instruction.ipynb
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -133,7 +133,7 @@
        "        <iframe\n",
        "            width=\"400\"\n",
        "            height=\"700\"\n",
-       "            src=\"https://guitarapp.com/metronome.html?embed=true&tempo=120&timeSignature=2&pattern=1&theme=light\"\n",
+       "            src=\"https://stonekick.com/metronome.html\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "            \n",
@@ -141,10 +141,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1047e30a0>"
+       "<IPython.lib.display.IFrame at 0x104403ca0>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
     "# Please, run this cell\n",
     "from IPython.display import IFrame\n",
     "\n",
-    "IFrame('https://guitarapp.com/metronome.html?embed=true&tempo=120&timeSignature=2&pattern=1&theme=light', width=400, height=700)"
+    "IFrame('https://stonekick.com/metronome.html', width=400, height=700)"
    ]
   },
   {
